tests/e2e/semantics/service_output_unique3.error
Error: syntax error in story at line 2, column 6

2|    when log
           ^^^

E0108: Service output `log` must be unique. Use `as outputName`
