tests/e2e/semantics/service_output_unique3.story
log = logging error
when log
  	x = 3
